# learning-algorithms

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
data/: mixed-network-count-min-sketch.json  mixed-network-count-sketch.json  mixed-network-hash-map.json  mnist.h5  web-network-count-min-sketch.json  web-network-count-sketch.json  web-network-hash-map.json
learning_algorithms/: analyzer.py  benchmarks.py  count_min_sketch.py  count_sketch.py  dataset.py  engineering.py  executor.py  hash_map.py  hashing.py  main.py  model.py  network_similator.py  registry.py  train.py  training.py  types.py  unsplash.py  utils.py  validate.py  validator.py
