[tool.poetry]
version = "0.0.0"
name = "learning-algorithms"
description = "learning-algorithms"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
analyze = "learning_algorithms.analyzer:analyze"
execute = "learning_algorithms.executor:execute"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.3"
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pandas-stubs = "^1.5.3.230227"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[mypy]
check_untyped_defs = true

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
