[tool.poetry]
version = "0.0.0"
name = "learning-algorithms"
description = "learning-algorithms"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
model = "learning_algorithms.model:main"
train = "learning_algorithms.train:main"
validate = "learning_algorithms.validate:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
keras = "2.11.0"
tensorflow = "2.11.0"
matplotlib = "3.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.1.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[mypy]
check_untyped_defs = true

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
