[tool.poetry]
version = "0.0.0"
name = "learning-algorithms"
description = "learning-algorithms"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
model = "learning_algorithms.model:main"
train = "learning_algorithms.training:train"
validate = "learning_algorithms.validator:validate"
download = "learning_algorithms.unsplash:download"
preprocess = "learning_algorithms.engineering:preprocess"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
keras = "2.11.0"
tensorflow = "2.11.0"
matplotlib = "3.7.1"
requests = "2.28.2"
click = "8.1.3"
pillow = "9.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.1.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[mypy]
check_untyped_defs = true

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
